# robot-simulator

./: .clang-format  .clang-format-ignore  .clang-tidy  .geminiignore  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  STYLE_GUIDE.md  packages.config  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/simulator_gui/: CMakeLists.txt
apps/simulator_gui/src/: main.cpp
cmake/: CompilerOptions.cmake  ProjectVersion.cmake  RobotSimulatorConfig.cmake  version.h.in
custom-triplets/: x64-mingw-static.cmake
docs/: .gitignore  Doxyfile
docs/architecture/adrs/: 0000-use-madr.md  0001-use-jolt-physics.md  adr-template.md
docs/architecture/c4-models/: generate.ps1  workspace.dsl
docs/architecture/c4-models/model/: actors.dsl  robot-simulator.dsl
docs/architecture/c4-models/model/components/: engine-core.dsl
docs/architecture/c4-models/views/: component.dsl  container.dsl  context.dsl  styles.dsl
docs/architecture/technical/: physics-pipeline.md
libs/engine/: CMakeLists.txt
libs/engine/include/engine/: Simulator.h
libs/engine/src/: Simulator.cpp
libs/engine/tests/: CMakeLists.txt  Simulator_test.cpp
libs/ui/: CMakeLists.txt
libs/ui/include/ui/: Renderer2D.h
libs/ui/src/: Renderer2D.cpp
scripts/: setup.ps1  setupc.ps1
